# Wells-Coding-Harness

./: .gitignore  .gitmodules  README.md  output_sample.txt  pyproject.toml  wells  wells.bat
src/coding_harness/: chat.py  cli.py  config.py  control.py  executor.py  gitops.py  graph.py  index_tools.py  main.py  mcp_client.py  repomap.py  sessions.py  setup.py  state.py  tools.py  tui.py
src/coding_harness/agents/: coder.py  planner.py  reviewer.py  tester.py
src/wells/: _gitutils.py  cli.py  config.py  control.py  executor.py  fleet.py  gitops.py  main.py  mcp_client.py  memory.py  providers.py  rules.py  tokens.py  tools.py  traces.py  tui.py  worktree.py
tests/: test_batch_masking.py  test_executor.py  test_headless.py  test_mcp_client.py  test_memory.py  test_orchestrator.py  test_platform.py  test_providers_and_settings.py  test_rules.py  test_tools.py  test_trace_analysis.py
wells-index/: Cargo.toml  README.md  build.rs  pyproject.toml
wells-index/python/wells_index/: __init__.py  _core.cp312-win_amd64.pyd
wells-index/src/: detect.rs  engine.rs  graph.rs  hash.rs  lib.rs  parse.rs  query.rs  store.rs
